# rustos

./: .gitignore  README.md
boot/src/: main.rs
kern/: .gitignore  Cargo.toml  Makefile  build.rs  qemu.sh
kern/src/: allocator.rs  console.rs  fs.rs  init.rs  logger.rs  main.rs  mutex.rs  net.rs  param.rs  process.rs  rng.rs  shell.rs  traps.rs  vm.rs
kern/src/allocator/: bin.rs  bump.rs
kern/src/fs/: sd.rs
kern/src/init/: panic.rs  vectors.s
kern/src/net/: uspi.rs
kern/src/process/: process.rs  scheduler.rs  stack.rs  state.rs
kern/src/traps/: frame.rs  irq.rs  syndrome.rs  syscall.rs
kern/src/vm/: pagetable.rs
lib/bw-allocator/: Cargo.toml
lib/bw-allocator/src/: lib.rs
lib/bw-allocator/src/allocator/: bin.rs
lib/bw_allocator/: Cargo.toml
lib/bw_allocator/src/: lib.rs
lib/fat32/src/: mbr.rs  util.rs
lib/kernel_api/: Cargo.toml
lib/kernel_api/src/: allocator.rs  args.rs  cstr.rs  fs.rs  lib.rs  mutex.rs  network.rs  socket.rs  syscall.rs
lib/pi/src/: common.rs  gpio.rs  interrupt.rs  lib.rs  local_interrupt.rs  rand.rs  rng.rs  timer.rs  uart.rs
lib/stack-vec/src/: lib.rs  tests.rs
lib/ttywrite/src/: main.rs
lib/xmodem/src/: lib.rs  tests.rs
tut/1-blinky/phase3/: blinky.c
user/: build.sh
user/bwsh/: Cargo.toml
user/cat/: Cargo.toml
user/echo/: Cargo.toml
user/fib/: Cargo.toml
user/hello/: Cargo.toml
user/ls/: Cargo.toml
user/open/: Cargo.toml
user/params/: Cargo.toml  objdump.txt
user/shared/: Makefile  cr0.rs
user/sleep_exit/: Cargo.toml  Makefile
user/user_app_template/: Cargo.toml
(+35 files in other folders)
